<ScrollView
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.innovate.himnario.DetailActivity"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/list_bottom_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:text="Nombre de Coro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="#ff000000"
                android:id="@+id/nomCoroText" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/musicaBtnDetail"
                android:src="@drawable/ic_nota"
                android:onClick="onClick_Musica"
                android:background="@color/background_material_light" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView android:text="@string/infoGen"
        android:textSize="24sp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:background="#ff595959"
        android:id="@+id/txtViewInfo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/list_top_margin"
        android:paddingLeft="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/list_bottom_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tonalidad"
            android:textSize="20sp"
            android:id="@+id/textViewton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/tonalidadText"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textViewton"
            android:layout_toEndOf="@+id/textViewton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocidad"
            android:textSize="20sp"
            android:id="@+id/textViewvel"
            android:layout_below="@+id/textViewton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rapido"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/velocidadText"
            android:layout_below="@+id/textViewton"
            android:layout_toRightOf="@+id/textViewvel"
            android:layout_toEndOf="@+id/textViewvel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:textSize="20sp"
            android:id="@+id/textViewtiempo"
            android:layout_below="@+id/textViewvel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/tiempoText"
            android:layout_below="@+id/textViewvel"
            android:layout_toRightOf="@+id/textViewvel"
            android:layout_toEndOf="@+id/textViewvel" />
    </RelativeLayout>


    <TextView android:text="@string/letra"
        android:textSize="24sp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:background="#ff595959"
        android:id="@+id/txtViewLetra" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cuerpo del coro"
        android:id="@+id/cuerpoText"
        android:textSize="20sp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:paddingTop="@dimen/list_top_margin"
        android:paddingBottom="@dimen/list_bottom_margin"/>

    <TextView android:text="@string/historia"
        android:textSize="24sp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:background="#ff595959"
        android:id="@+id/txtViewHistoria" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/list_top_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/autmus">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autorlet"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/txtViewAutor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Charles Wesley"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/autorletText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/autlet"
            android:layout_below="@+id/autmus"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autormus"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/txtViewAutor2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Charles Wesley"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/autormusText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/cita"
            android:layout_below="@+id/autlet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cita"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/txtViewCita" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:id="@+id/citaTxt" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cuerpo Historia"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/historiaText"
            android:layout_below="@+id/cita"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</LinearLayout>
    </ScrollView>