<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchView"
                android:inputType="textCapSentences">

            </SearchView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/buttonLentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/lentos"
                    android:textColor="@color/verdeVelButtonsDesactivados"/>

                <Button
                    android:id="@+id/buttonMedios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:text="@string/medios"
                    android:textColor="@color/verdeVelButtonsDesactivados"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/buttonRapidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:text="@string/rapidos"
                    android:textColor="@color/verdeVelButtonsDesactivados"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/coro_list" />

    </LinearLayout>
</RelativeLayout>
